# hangman

./: .gitignore  README.md
v1/mhc/: CMakeLists.txt  Makefile
v1/mhc/doc/: design.graphml
v1/mhc/src/: hangman.cpp  hangman.h  main.cpp  test.cpp  test.h
